--- a/PML_CourseProject.Rmd
+++ b/PML_CourseProject.Rmd
@@ -212,5 +212,5 @@ result<-predict(modRF1,newdata=validation)
 result
 ```
 
-This _result_ will be used to answer the quiz.
+This _result_ will be used to answer the quiz for the course.
 
